--- a/acerca.html
+++ b/acerca.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/png" href="img/logo.png" />
 
-    <title>COOMUSTRANSTUR</title>
+    <title>COOMUTRANSTUR</title>
 
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/timeline.css">
@@ -59,7 +59,7 @@
                                 <a class="nav-link" href="turismo">Guía turística</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Nosotros</a>
+                                <a class="nav-link myLinkActive" href="#">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
@@ -94,7 +94,7 @@
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8" data-aos="zoom-in">
-                    <p class="title text-center">Sobre Nosotros</p>
+                    <p class="title text-center">SOBRE NOSOTROS</p>
                     <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
                         sector
@@ -105,7 +105,7 @@
                         Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los
                         asociados y
                         comunidad
-                        en general servicios de; recreación, cultura, gastronomía, turismo ecológico y transporte.
+                        en general servicios de: recreación, cultura, gastronomía, turismo ecológico y transporte.
                         Asociando a
                         personas naturales que contribuyen económicamente a la cooperativa y son aportantes directos de
                         su
@@ -117,7 +117,7 @@
 
             <div id="vision" class="d-flex align-items-center justify-content-center">
                 <div class="col-md-5 text-center" data-aos="zoom-in">
-                    <h3 class="title ">Nuestra Visión</h3>
+                    <h3 class="title ">NUESTRA VISIÓN</h3>
                     <p class="text-justify">
                         La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
                         del
@@ -134,7 +134,7 @@
 
             <div id="mision" class="d-flex align-items-center justify-content-center">
                 <div class="col-md-5 text-center" data-aos="zoom-in">
-                    <h3 class="title">Nuestra Misión</h3>
+                    <h3 class="title">NUESTRA MISIÓN</h3>
                     <p class="text-justify">
                         Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
                         familias
@@ -152,7 +152,7 @@
     <!-- Historia de las motobrujitas -->
     <section class="bg-white">
 
-        <h3 class="title text-center pt-4 pb-4">Historia de la Cooperativa Coomutranstur</h3>
+        <h3 class="title text-center pt-4 pb-4">HISTORIA DE LA COOPERATIVA COOMUTRANSTUR</h3>
         <section class="timeline">
             <div class="container">
                 <div class="timeline-item">
@@ -212,27 +212,27 @@
 
                 <div class="row mt-5">
                     <div class="col">
-                        <h2 class="title text-center">Directivos, Comites y Asociados "COOMUTRANSTUR"</h2>
+                        <h2 class="title text-center">DIRECTIVOS, COMITÉS Y ASOCIADOS "COOMUTRANSTUR"</h2>
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <figure class="figure text-center">
+                            <figure class="figure text-center m-1">
                                 <img src="img/nosotros/virgilio.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Luis Virgilio Otero</figcaption>
                                 <!-- <span class="text-dark">Representante Legal</span> -->
                             </figure>
-                            <figure class="figure text-center">
+                            <figure class="figure text-center m-1">
                                 <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Albeiro Caicedo Hurtado</figcaption>
                             </figure>
-                            <figure class="figure text-center">
+                            <figure class="figure text-center m-1">
                                 <img src="img/nosotros/orlando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Orlando Valencia</figcaption>
                             </figure>
-                            <figure class="figure text-center">
+                            <figure class="figure text-center m-1">
                                 <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Luis</figcaption>
                             </figure>
-                            <figure class="figure text-center">
+                            <figure class="figure text-center m-1">
                                 <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Rolando Rivas Arboleda</figcaption>
                                 <!-- <span class="text-dark">Lider Comunitario</span> -->
@@ -285,96 +285,98 @@
                         <strong class="text-success"> Valores corporativos:</strong>
                     </h5>
                     <div class="text-center">
-                        <p class=" tarjeta4">Ayuda mutua</p>
-                        <p class=" tarjeta4">Responsabipdad</p>
-                        <p class=" tarjeta4">Honestidad </p>
+                        <p class=" tarjeta4">Ayuda Mutua</p>
+                        <p class=" tarjeta4">Responsabilidad</p>
+                        <p class=" tarjeta4">Honestidad</p>
                         <p class=" tarjeta4">Democracia</p>
-                        <p class=" tarjeta4">Equidad </p>
-                        <p class=" tarjeta4">Sopdaridad </p>
-                        <p class=" tarjeta4">Honestidad y transparencia</p>
+                        <p class=" tarjeta4">Equidad</p>
+                        <p class=" tarjeta4">Solidaridad </p>
+                        <p class=" tarjeta4">Transparencia</p>
 
                     </div>
                 </div>
         </section>
 
         <div class="w-100"></div>
+        <section class="container-fluid pl-0 pr-0">
 
-        <div class="col text-white bg-dark p-5">
-            <h3 class="title2">
-                PRINCIPIOS CORPORATIVOS
-            </h3>
-            <ol class="text-justify">
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
-                    para
-                    todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
-                    responsabilidades
-                    que
-                    conlleva la membresía con equidad social.
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Control democrático por los socios: Las cooperativas son organizaciones democráticas
-                    controladas
-                    por sus miembros quienes participan activamente en la definición de las políticas y en la
-                    toma
-                    de
-                    decisiones, las personas para representar la cooperativa responden ante los miembros. Donde
-                    todos
-                    tienen igual derecho de voto.
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Participación económica de los socios: Los asociados capitalizan de manera equitativa y
-                    controlan
-                    democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
-                    común
-                    de la
-                    Cooperativa.
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
-                    controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
-                    gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
-                    control
-                    democrático y mantengan la autonomía de la cooperativa". La autonomía es la condición de un
-                    ser
-                    que
-                    se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
-                    sus
-                    dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
-                    desarrollo de
-                    sus cooperativas. Las cooperativas informan al público en general, particularmente a
-                    jóvenes y
-                    creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
-                    empresarial
-                    y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
-                    rigurosa de
-                    otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados
-                    más
-                    eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio
-                    de
-                    estructuras locales, nacionales e internacionales".
-                </li>
-                <li data-aos="fade-up" data-aos-delay="50">
-                    Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
-                    comunidad por medio de políticas aceptadas por sus asociados". Si bien las cooperativas
-                    están
-                    establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
-                    éstos
-                    viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa
-                    como
-                    tal,
-                    está íntimamente ligada a su comunidad.
-                </li>
-            </ol>
-        </div>
+            <div class="col text-white bg-dark p-5">
+                <h3 class="title2">
+                    PRINCIPIOS CORPORATIVOS
+                </h3>
+                <ol class="text-justify">
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Asociación voluntaria y abierta: Las cooperativas son asociaciones voluntarias y abiertas
+                        para
+                        todas aquellas personas dispuestas a utilizar sus servicios y de aceptar las
+                        responsabilidades
+                        que
+                        conlleva la membresía con equidad social.
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Control democrático por los socios: Las cooperativas son organizaciones democráticas
+                        controladas
+                        por sus miembros quienes participan activamente en la definición de las políticas y en la
+                        toma
+                        de
+                        decisiones. Las personas para representar la cooperativa responden ante los miembros, donde
+                        todos
+                        tienen igual derecho de voto.
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Participación económica de los socios: Los asociados capitalizan de manera equitativa y
+                        controlan
+                        democráticamente la Cooperativa. Por lo menos una parte de su capital será de propiedad
+                        común
+                        de la
+                        Cooperativa.
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Autonomía e independencia: Las cooperativas son organizaciones autónomas de ayuda mutua,
+                        controladas por sus asociados. Si entran en acuerdos con otras organizaciones (incluyendo
+                        gobiernos) o tienen capital de fuentes externas, lo realizan en términos que aseguren el
+                        control
+                        democrático y mantengan la autonomía de la cooperativa. La autonomía es la condición de un
+                        ser
+                        que
+                        se da a sí mismo su ley y que tiene la libertad de gobernarse por sus propias normas.
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Educación, capacitación e información: Brindar educación y capacitación a sus asociados, a
+                        sus
+                        dirigentes electos, gerentes y empleados, de tal forma que contribuyan eficazmente al
+                        desarrollo de
+                        sus cooperativas. Las cooperativas informan al público en general, particularmente a
+                        jóvenes y
+                        creadores de opinión, acerca de la naturaleza y beneficios del Cooperativismo.
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Cooperación entre cooperativas: Este principio permite consolidar y proyectar el ámbito
+                        empresarial
+                        y social de la cooperativa en entornos más amplios, mediante la colaboración práctica y
+                        rigurosa de
+                        otras cooperativas y otros niveles de cooperación. "Las cooperativas sirven a sus asociados
+                        más
+                        eficazmente y fortalecen el Movimiento Cooperativo, trabajando de manera conjunta por medio
+                        de
+                        estructuras locales, nacionales e internacionales".
+                    </li>
+                    <li data-aos="fade-up" data-aos-delay="50">
+                        Compromiso con la comunidad: Las cooperativas trabajan para el desarrollo sostenible de la
+                        comunidad por medio de políticas aceptadas por sus asociados. Si bien las cooperativas
+                        están
+                        establecidas en primera instancia para el beneficio de sus miembros, no pueden olvidar que
+                        éstos
+                        viven en espacios geográficos específicos y en comunidades definidas y que la cooperativa
+                        como
+                        tal,
+                        está íntimamente ligada a su comunidad.
+                    </li>
+                </ol>
+            </div>
 
-        </div>
+        </section>
+
     </section>
 
 
