--- a/alianzas.html
+++ b/alianzas.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" href="img/logo.png" />
 
-  <title>COOMUSTRANSTUR</title>
+  <title>COOMUTRANSTUR</title>
 
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
@@ -60,7 +60,7 @@
                 <a class="nav-link" href="acerca">Nosotros</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Alianzas Estratégicas</a>
+                <a class="nav-link myLinkActive" href="#">Alianzas Estratégicas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#!">Angeles Inversores</a>
@@ -76,7 +76,6 @@
     </header>
     <!-- texto main -->
   </section>
-
   <video src="video/casa wenka.mp4" height="400px" width="100%" controls muted autoplay></video>
 
   <section>
@@ -84,7 +83,7 @@
       <div class="row justify-content-around">
 
         <div class="col-12 mb-3 text-center title font-weight-bold">
-          <p class="text-uppercase">Alianzas Nacionales con unidades estrategicas de negocio San cipriano - Córdoba -
+          <p class="text-uppercase">Alianzas Nacionales con unidades estratégicas de negocio San cipriano - Córdoba -
             Santa Elena</p>
         </div>
 
