--- a/turismo.html
+++ b/turismo.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/png" href="img/logo.png" />
 
-    <title>COOMUSTRANSTUR</title>
+    <title>COOMUTRANSTUR</title>
 
     <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
     <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
@@ -53,7 +53,7 @@
                                 <a class="nav-link" href="/">Inicio</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="#!">Guía turística</a>
+                                <a class="nav-link myLinkActive" href="#">Guía turística</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="acerca">Nosotros</a>
@@ -75,9 +75,9 @@
         </header>
         <!-- texto main -->
     </section>
-
+    
     <section id="">
-        <div class="row justify-content-around">
+        <div class="row justify-content-around mt-3">
             <div class="col-12">
                 <h3 class="title text-center">Sendero Ecoturístico Reserva forestal San cipriano</h3>
             </div>
