actualizacion de lisnk
esta y mas cosas 7:07pm

--- a/educacion.html
+++ b/educacion.html
@@ -55,20 +55,20 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Inicio</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="turismo">Guía turística</a>
                             </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Nosotros</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="acerca">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#!">Angeles Inversores</a>
+                                <a class="nav-link" href="angeles">Angeles Inversores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#!">Educación y formación ciudadana</a>
+                                <a class="nav-link myLinkActive" href="#">Educación y formación ciudadana</a>
                             </li>
 
                         </ul>
