--- a/turismo.html
+++ b/turismo.html
@@ -62,7 +62,7 @@
                                 <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#!">Angeles Inversores</a>
+                                <a class="nav-link" href="angeles">Angeles Inversores</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="educacion">Educación y formación ciudadana</a>
@@ -388,18 +388,6 @@
     </main>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     <section class="mt-4 mb-4">
         <div class="container-fluid pl-0 pr-0">
             <div class="galery_container row d-flex justify-content-center">
@@ -409,8 +397,6 @@
             </div>
         </div>
     </section>
-
-
 
 
     <!-- Footer  -->
