--- a/alianzas.html
+++ b/alianzas.html
@@ -59,11 +59,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="acerca">Nosotros</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link myLinkActive" href="#">Alianzas Estratégicas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#!">Angeles Inversores</a>
+                <a class="nav-link" href="angeles">Angeles Inversores</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="educacion">Educación y formación ciudadana</a>
