--- a/gastronomia.html
+++ b/gastronomia.html
@@ -55,17 +55,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/">Inicio</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="turismo">Guía turística</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="acerca">Nosotros</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="alianzas">Alianzas Estratégicas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#!">Angeles Inversores</a>
+                                <a class="nav-link" href="angeles">Angeles Inversores</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="educacion">Educación y formación ciudadana</a>
