--- a/acerca.html
+++ b/acerca.html
@@ -150,7 +150,7 @@
     </section>
 
     <!-- Historia de las motobrujitas -->
-    <!-- <section class="bg-white">
+    <section class="bg-white">
 
         <h3 class="title text-center pt-4 pb-4">HISTORIA DE LA COOPERATIVA COOMUTRANSTUR</h3>
         <section class="timeline">
@@ -204,7 +204,7 @@
 
 
             </div>
-        </section> -->
+        </section>
 
         <section>
             <div class="container">
