--- a/turismo.html
+++ b/turismo.html
@@ -105,7 +105,7 @@
             <div class="row">
                 <!-- Charco Los Sabalos -->
                 <div class="col text-center" id="contenido_turismo1">
-                    <img src="img/turismo/LOS ABALOS.jpg" alt="" class="img-fluid mb-3">
+                    <h2 class="title tarjeta5">Charco Los Sabalos</h2>
                     <div class="row">
                         <div class="col tarjeta1">
                             <div class="galery_container row d-flex justify-content-center">
@@ -132,7 +132,7 @@
 
             <!-- Cascada La Ventiadora -->
             <div class="col text-center" id="contenido_turismo2">
-                <img src="img/turismo/LA VENTIADORA.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Cascada La Ventiadora</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -153,7 +153,7 @@
 
             <!-- Charco Oscuro -->
             <div class="col text-center" id="contenido_turismo3">
-                <img src="img/turismo/OSCURO.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Charco Oscuro</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -197,7 +197,7 @@
 
             <!-- Sendero La Conferencia -->
             <div class="col text-center" id="contenido_turismo4">
-                <img src="img/turismo/CONFERENCIA.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Sendero La Conferencia</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -249,7 +249,7 @@
 
             <!-- Charco La Platina -->
             <div class="col text-center" id="contenido_turismo5">
-                <img src="img/turismo/PLATINA.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Charco La Platina</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -273,7 +273,7 @@
 
             <!-- Sendero Charco La Tortuga -->
             <div class="col text-center" id="contenido_turismo6">
-                <img src="img/turismo/TORTUGA.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Sendero Charco La Tortuga</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -310,7 +310,7 @@
 
             <!-- Charco Peña Azul -->
             <div class="col text-center" id="contenido_turismo7">
-                <img src="img/turismo/PEÑA.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Charco Peña Azul</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -328,7 +328,7 @@
 
             <!-- Charco Trompa del Diablo -->
             <div class="col text-center" id="contenido_turismo8">
-                <img src="img/turismo/TROMPA DIABLO.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Charco Trompa del Diablo</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -360,7 +360,7 @@
 
             <!-- Zona de camping Fundacion San Cipriano -->
             <div class="col text-center" id="contenido_turismo9">
-                <img src="img/turismo/fundacionSC.jpg" alt="" class="img-fluid mb-3">
+                <h2 class="title tarjeta5">Zona de camping Fundacion San Cipriano</h2>
                 <div class="row">
                     <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
@@ -386,17 +386,6 @@
 
         </div>
     </main>
-
-
-    <section class="mt-4 mb-4">
-        <div class="container-fluid pl-0 pr-0">
-            <div class="galery_container row d-flex justify-content-center">
-
-                <img src="img/turismo/reglamento.jpg" alt="" srcset="" class="img-fluid lazy">
-
-            </div>
-        </div>
-    </section>
 
 
     <!-- Footer  -->
