comit antes de.
12:23pm (formateada de mi pc)

--- a/acerca.html
+++ b/acerca.html
@@ -159,35 +159,9 @@
                     <div class="timeline-img"></div>
 
                     <div class="timeline-content " data-aos="fade-up" data-aos-delay="50">
-                        <h2>Title</h2>
-                        <div class="date">1 ENE 2002</div>
-                        <p>En espera de contenido.</p>
-                    </div>
-                </div>
-
-                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
-
-                    <div class="timeline-img"></div>
-
-                    <div class="timeline-content timeline-card ">
-                        <div class="timeline-img-header">
-                            <img src="img/bg1.jpg" class="img-fluid" alt="">
-                            <h2>Card Title</h2>
-                        </div>
-                        <div class="date">1 ENE 2005</div>
-                        <p>En espera de contenido.</p>
-                    </div>
-
-                </div>
-
-                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
-
-                    <div class="timeline-img"></div>
-
-                    <div class="timeline-content ">
-                        <div class="date">1 ENE 2009</div>
-                        <h2>Title</h2>
-                        <p>En espera de contenido.</p>
+                        <h2>Inicio</h2>
+                        <div class="date">2002</div>
+                        <p>La COOMUTRANSTUR nació como una alternativa de trabajo comunitario, donde los habitantes de Córdoba y san Cipriano, dedicados a las actividades de Turismo ecológico, Transporte, recreación, cultura, gastronomía, actividades comerciales, caza, siembra, pesca y extracción de madera; aunaron fuerzas para generar oportunidades de empleo desde una estructura organizativa.</p>
                     </div>
                 </div>
 
@@ -196,8 +170,18 @@
                     <div class="timeline-img"></div>
 
                     <div class="timeline-content ">
+                        <h2>Registro ante Cámara de Comercio</h2>
+                        <div class="date">2004</div>
+                        <p>La Cooperativa quedó Registrada en Cámara de Comercio.</p>
+                    </div>
+                </div>
+                <div class="timeline-item" data-aos="fade-up" data-aos-delay="50">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content ">
                         <h2>Title</h2>
-                        <div class="date">1 ENE 2018</div>
+                        <div class="date">2018</div>
                         <p>En espera de contenido.</p>
                     </div>
                 </div>
@@ -222,7 +206,7 @@
                             </figure>
                             <figure class="figure text-center m-1">
                                 <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Albeiro Caicedo Hurtado</figcaption>
+                                <figcaption class="figure-caption">Albeiro Murillo Perea</figcaption>
                             </figure>
                             <figure class="figure text-center m-1">
                                 <img src="img/nosotros/orlando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
@@ -230,7 +214,7 @@
                             </figure>
                             <figure class="figure text-center m-1">
                                 <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Luis</figcaption>
+                                <figcaption class="figure-caption">Luis Alberto Moreno</figcaption>
                             </figure>
                             <figure class="figure text-center m-1">
                                 <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
