--- a/angeles.html
+++ b/angeles.html
@@ -120,7 +120,7 @@
                 Etno-Emprendimiento / innovación social .
               </p>
               <hr class="my-4" />
-              <p>
+              <p translate="no">
                 Quieres apoyar alguno de los proyectos a continuacion? Lo puedes
                 hacer mediante Whatsapp, nuestro formulario de contacto o el
                 chat en línea.
@@ -148,8 +148,8 @@
               <h3>Listado de Proyectos</h3>
 
               <ul>
-                <li>
-                  <h6>Elaboracion de drones</h6>
+                <li class="tarjeta3">
+                  <h6>Elaboración de drones</h6>
                   <p>por: Amir Murber</p>
                 </li>
               </ul>
